--- a/global.css
+++ b/global.css
@@ -1,6 +1,3 @@
-/*********************/
-/* BASIC */
-/*********************/
 
 body {
 	font-family: "Century Gothic", "Gill Sans", Arial, sans-serif;
@@ -20,32 +17,30 @@ br.clear {
 	background-color: #00CC33;
 }
 
-/*********************/
-/* LAYOUT */
-/*********************/
-
-#wrapper {
+.wrapper {
 	width: 760px;
 	border-right-width: 1px;
 	border-right-style: solid;
 	border-right-color: #999999;
 }
 
-#main {
+.main {
 	border-right: 1px solid #999999;
 	border-left: 1px solid #999999;
 	padding: 3px 3px 0 6px;
-	float: left;
+	/*float: left;*/
+	display: inline-block;
 	width: 424px;
 }
 
-#subNav {
+.subNav {
 	width: 150px;
-	float: left;
+	/*float: left;*/
+	display: inline-block;
 	background-color: #FBEF99;
 }
 
-#banner {
+.banner {
 	background-image: url(images/bg/banner_bg.jpg);
 	background-repeat: repeat-x;
 	background-position: left top;
@@ -53,8 +48,9 @@ br.clear {
 	border-bottom: 1px solid #999999;
 }
 
-#announce {
-	float: left;
+.announce {
+	/*float: left;*/
+	display: inline-block;
 	width: 166px;
 	border-top: 10px solid #294E56;
 	margin-top: 3px;
@@ -63,7 +59,7 @@ br.clear {
 	line-height: 95%;
 	margin-right: 3px;
 }
-#copyright {
+.copyright {
 	clear: both;
 	margin-left: 150px;
 	border: 1px solid #999999;
@@ -71,36 +67,32 @@ br.clear {
 	font-size: 12px;
 	padding-left: 6px;
 }
-
-/*********************/
-/* BANNER STYLES */
-/*********************/
-#background {
+.background {
 	background-image: url(images/bg/banner_flower.jpg);
 	background-repeat: no-repeat;
 	background-position: right top;
 }
 
-/* image replacement technique */
-#banner p.logo {
+.banner p.logo {
 	background: url(images/logo.gif) no-repeat left top;
 	height: 70px;
 	text-indent: -5000px;
 }
 
-#nav {
+.nav {
 	margin-top: 10px;
 	margin-bottom: 0px;
 }
 
-#nav li {
+.nav li {
 	list-style-type: none;
 	padding: 0px;
 	margin: 0;
-	float: left;
+	/*float: left;*/
+	display: inline-block;
 }
 
-#nav a {
+.nav a {
 	display: block;
 	font-size: 11px;
 	color: #D6ECAE;
@@ -115,38 +107,28 @@ br.clear {
 	margin-bottom: 2px;
 }
 
-#nav a:hover {
+.nav a:hover {
 	background: #73AFB7;
 	border-right: 1px solid #14556B;
 	border-bottom: 1px solid #14556B;
 	color: #FBEF99;
 }
 
-/*highlight "you are here" buttons*/
-#home #nav a#homeLink,
-#feature #nav a#featureLink {
+.home .nav a#homeLink,
+.feature .nav a#featureLink {
 	background: #73AFB7;
 	border-right: 1px solid #14556B;
 	border-bottom: 1px solid #14556B;
 	color: #FBEF99;
 }
-
-/*********************/
-/* MAIN SECTION STYLES */
-/*********************/
-#main h1 {
+.main h1 {
 	color: #5F9794;
 	font: bold 24px "Century Gothic", "Gill Sans", Arial, sans-serif;
 }
-
-/*********************/
-/* ANNOUNCEMENT STYLES */
-/*********************/
-
-#announce h2 {
+.announce h2 {
 	font-size: 14px;
 }
-#announce a {
+.announce a {
 	font-size: 12px;
 	display: block;
 	text-decoration: none;
@@ -154,34 +136,29 @@ br.clear {
 	padding: 3px 5px;
 	border-bottom: 1px solid #14556B;
 }
-#announce .title {
+.announce .title {
 	font-weight: bold;
 	display: block;
 }
-#announce a:hover {
+.announce a:hover {
 	background-color: #5F9794;
 	color: #FBEF99
 }
 
-#announce ul {
+.announce ul {
 	list-style:none;
 }
 
-#announce li {
-	display: inline; /* for IE 7 and earlier white space bug */
+.announce li {
+	display: inline;
 }
-/*********************/
-/* PAGE SPECIFIC STYLES */
-/*********************/
 
-/* HOME */
-/* no left sidebar--stretch main entire distance */
-#home #main {
+.home .main {
 	margin-left: 0;
 	width: 577px;
 }
-/* copyright fits page */
-#home #copyright {
+
+.home .copyright {
 	margin-left: 0;
 	padding: 3px 0 3px 30px;
 	font-style: italic;
@@ -209,7 +186,8 @@ br.clear {
 }
 
 .feature img {
-	float: right;
+	/*float: right;*/
+	display: inline-block;
 	margin-left: 10px;
 	border: 10px solid #FDD041;
 	border-top: none;
@@ -260,7 +238,7 @@ br.clear {
 	background-color: #294E56;
 }
 
-#home #main h1#lead {
+.home .main h1.lead {
 	background: url(images/features/tomato.jpg) no-repeat right top;
 	color: #FBEF99;
 	padding-top: 130px;
@@ -268,7 +246,7 @@ br.clear {
 	padding-bottom: 25px;
 	margin-bottom: 5px;
 }
-#subNav li a {
+.subNav li a {
 	font-size: 12px;
 	text-decoration: none;
 	display: block;
@@ -279,28 +257,30 @@ br.clear {
 	border-bottom: 1px solid #d6ecae;
 }
 
-#subNav li a:hover {
+.subNav li a:hover {
 	background: url(images/bg/side_nav_bg.jpg);
 	color: #102536;
 }
-.col2 #announce {
-	float: left;
+.col2 .announce {
+	/*float: left;*/
+	display: inline-block;
 	margin-bottom: 10px;
 }
-.col2 #main {
+.col2 .main {
 	float: right;
+	/*display: inline-block;*/
 	border-right: none;
 	width: 573px;
 }
-.col2 #copyright {
+.col2 .copyright {
 	margin-left: 0px;
 }
-#main h2 {
+.main h2 {
 	font-size: 1.2em;
 	margin-top: 15px;
 	color: #666666;
 }
-.col2 #main h1 {
+.col2 .main h1 {
 	color: #333333;
 	border-bottom: 1px dashed #666;
 	margin-top: 5px;
@@ -312,6 +292,7 @@ br.clear {
 }
 .floatRight {
 	float: right;
+	/*display: inline-block;*/
 	margin: 0 10px 2px 15px;
 }
 img.floatRight {
@@ -320,12 +301,12 @@ img.floatRight {
 table {
 	font-family: "Times New Roman", Times, serif;
 }
-#main #subForm p {
+.main .sub-form p {
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
-#main p.privacy {
+.main p.privacy {
 	color: #73AFB7;
 	margin-top: 25px;
 	margin-bottom: 50px;
